contrast fix

--- a/weather/css/small.css
+++ b/weather/css/small.css
@@ -482,7 +482,7 @@ form {
 }
 
 #towns section h3 {
-    color: #677db7;
+    color: #0d0221;
     margin: 0;
     font-size: 1em;
 }
